2002-08-27  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.7.7

	* src/libsoup/soup-message.c (global_handlers): Replace the 2xx
	response class handler with an "Authentication-Info" header
	handler, so we can correctly set SoupAuths as successful, even if
	we got redirects or errors.

2002-08-20  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-ntlm.c: (soup_ntlm_parse_challenge): Use
	g_memdup, not g_strndup, to copy the nonce. Duh! Fixes #26061
	(sporadic NTLM auth failures).
	(NTLMResponse): Fix this structure up a bit, although Windows
	doesn't actually seem to care that we've been mangling it all
	along.
	(soup_ntlm_response): Translate the flags to little-endian (though
	again, it happened to not matter).
	(various) Use GUINT16_TO/FROM_LE rather than #defining our own
	versions.
	(Spbox): Add some braces to make gcc happier.

2002-08-07  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-auth.c (digest_auth_func): Fix a memory leak.
	(soup_auth_new_digest): Fix a memory leak.

2002-08-07  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.7.6.

2002-08-06  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-socket-unix.c: Remove an unneeded #include that
	causes problems on OS X.

2002-08-05  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-message.c (authorize_handler): If we've gone
	through a complete round of NTLM authentication on the connection
	and then find ourselves here, then throw a CANT_AUTHENTICATE,
	because trying to authenticate again is just going to give the
	same error (since the problem is either that the password is
	incorrect or the user doesn't have permission to access the
	resource) and get into an infinite loop.

	* src/libsoup/soup-auth.c (soup_auth_invalidates_prior): Remove
	this since it's not being used any more.
	(basic_compare_func, digest_compare_func, ntlm_compare_func):
	Remove these since they were only used by
	soup_auth_invalidates_prior.